docs : access secrets
